testsuite/tests/semantic_errors/subp_access_missing_entity/test.adb
procedure Test is
   type Acc is access procedure;

   procedure Foo is null;

   A : Acc := Fo'Access;
   pragma Test_Statement (Expect_Fail => True);
begin
   null;
end Test;
