testsuite/tests/semantic_errors/subp_access_missing_entity/test.out
Analyzing test.adb
##################

Resolving xrefs for node <ObjectDecl ["A"] test.adb:6:4-6:25>
*************************************************************

test.adb:6:15: error: cannot find name 'Fo'
6 |    A : Acc := Fo'Access;
  |               ^^


Expected name resolution failure for node <ObjectDecl ["A"] test.adb:6:4-6:25>


Done.
